# musefileformat

./: CMakeLists.txt  Muse.proto  Muse_v1.pb.c  Muse_v1.pb.h  Muse_v1.proto  Muse_v2.npb.proto  Muse_v2.pb-c.c  Muse_v2.pb-c.h  Muse_v2.pb.c  Muse_v2.pb.h  Muse_v2.proto  README.md  musefileformat.c  musefileformat.h  test.c
